# ExtendExoPlayer

./: .gitignore  README.md  build.gradle  settings.gradle
extendexoplayer/: .gitignore  build.gradle
extendexoplayer/src/main/: AndroidManifest.xml
extendexoplayer/src/main/cpp/: CMakeLists.txt  FFmpegDecoder.cpp  FFmpegDecoder.h  SoftCodec.cpp  SoftCodec.h  SoftCodec_jni.cpp  SoftCodec_jni.h  native-lib.cpp
extendexoplayer/src/main/cpp/base/: stringprintf.cpp
extendexoplayer/src/main/cpp/foundation/: ABuffer.cpp  AHandler.cpp  ALooper.cpp  ALooperRoster.cpp  AMessage.cpp  AString.cpp  hexdump.cpp
extendexoplayer/src/main/cpp/foundation/include/: AAtomizer.h  ABase.h  ABuffer.h  AData.h  AHandler.h  ALooper.h  ALooperRoster.h  AMessage.h  AString.h  Flagged.h
extendexoplayer/src/main/cpp/include/libavutil/: ffversion.h
extendexoplayer/src/main/cpp/media/: MediaCodecBuffer.cpp
extendexoplayer/src/main/cpp/media/include/: MediaCodecBuffer.h
extendexoplayer/src/main/cpp/nativehelper/: ALog-priv.h  JNIHelp.cpp  JNIHelp.h  JniConstants.cpp  JniConstants.h  ScopedLocalRef.h  module_api.h  scoped_local_ref.h
extendexoplayer/src/main/cpp/utils/: RefBase.cpp  SharedBuffer.cpp  String16.cpp  String8.cpp  StrongPointer.cpp  Threads.cpp  Timers.cpp  Unicode.cpp  VectorImpl.cpp
extendexoplayer/src/main/cpp/utils/include/: AndroidThreads.h  Condition.h  KeyedVector.h  Mutex.h  RWLock.h  RefBase.h  SortedVector.h  String16.h  String8.h  Thread.h  ThreadDefs.h  Timers.h  Vector.h  VectorImpl.h  threads.h
extendexoplayer/src/main/java/com/wh/extendexoplayer/: FFmpegRenderersFactory.java  FrameRotationQueue.java  GlUtil.java  MediaInfo.java  MediaInfoChangeListener.java  P2pMediaCodecAudioRenderer.java  P2pMediaCodecVideoRenderer.java  P2pMediaPeriod.java  P2pMediaSource.java  P2pRenderersFactory.java
extendexoplayer/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/res/layout/: activity_main.xml  main_activity.xml  native_test_activity.xml  player_activity.xml  textview.xml
src/main/java/com/wh/extendexoplayer/: MediaInfoChangeListener.java  MediaType.java  MediaUtil.java  P2pMediaCodecAudioRenderer.java  P2pMediaCodecVideoRenderer.java  ReceiveDataListener.java  VideoInfo.java
(+45 files in other folders)
